Primer commit: portafolio web

--- a/angular.json
+++ b/angular.json
@@ -16,12 +16,10 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets"
             ],
             "styles": [
+              "node_modules/remixicon/fonts/remixicon.css", 
               "src/styles.css"
             ]
           },
