--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@angular/service-worker": "^20.3.16",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindplus/elements": "^1.0.19",
     "postcss": "^8.5.6",
